# lerobot-hackerton-rokey

./: README.md
hackathon/: package.xml  setup.cfg  setup.py
hackathon/hackathon/: ik_client.py  joint_state_subscriber.py  move_joint.py  move_with_joint_command_6dof.py  move_with_joint_command_6dof_chunck.py  move_with_joint_command_7dof.py  pub_action_chunck.py
lecture_code/: package.xml  setup.cfg  setup.py
lecture_code/lecture_code/: move_block.py  move_gear.py  stack_upgrade.py  task1.py
rokey_moveit/: CMakeLists.txt  package.xml
rokey_moveit/src/: fk_list_publisher.cpp  fk_publisher.cpp
rokey_moveit/urdf/: panda.urdf
